[package]
name = "kvs"
authors = ["Murilo Ijanc' <mbsd@m0x.ru>"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false

[[bin]]
name = "kvs"
test = false
path = "src/bin/kvs.rs"

[dependencies]
clap = "2.33.3"
tempfile = "3.2.0"
walkdir = "2.3.2"

[dev-dependencies]
assert_cmd = "2.0.1"
predicates = "2.0.2"
